# byob

./: .gitignore  README.md
cases/education/student-support/: README.md
cases/fi/docs/: plan.md
cases/papers-with-code/: .gitignore
cases/papers-with-code/rain/: .gitignore  README.md  data_process.py  data_tools.py  main.py  run_target_shift_analysis.py  target_shift_analysis.py  target_visualization.py  utils.py  visualization.py
cases/papers-with-code/rain/data/: 省市区县乡镇行政区划数据使用文档.txt  省市区坐标边界数据使用文档.txt  观测数据202107.txt
cases/papers-with-code/ship/: data_preprocessor.py  environment.yaml  layout_engine.py  layout_optimizer.py  main.py
cases/papers-with-code/step3d/: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cases/papers-with-code/step3d/docs/: 1.pptx  BOSS+(2).STEP  HOLES+(2).STEP  Part_Smiely_holes_only.STEP  README.md  TROUGH+(2).STEP  boss.STEP  holes+(3).STEP  trough.STEP
cases/papers-with-code/step3d/docs/prompts/: prompts.md
cases/papers-with-code/step3d/examples/: analyze_step.py
cases/papers-with-code/step3d/src/step3d/: __init__.py
cases/papers-with-code/step3d/src/step3d/core/: __init__.py  geometry.py  geometry_converter.py  geometry_models.py  geometry_wrapper.py  step_reader.py
cases/papers-with-code/step3d/src/step3d/features/: __init__.py  aag_recognizer.py  feature_recognizer.py
cases/papers-with-code/step3d/src/step3d/gui/: main_window.py  vtk_utils.py
cases/papers-with-code/step3d/src/step3d/ui/: README.md  __init__.py  check_environment.py  run_viewer.py  step_viewer.py
cases/papers-with-code/step3d/src/step3d/visualization/: __init__.py
cases/papers-with-code/step3d/tests/: __init__.py  conftest.py  test_feature_recognition.py
docs/research/browser-agent/: research.md
(+46 files in other folders)
