[project]
name = "step3d"
version = "0.1.0"
description = "STEP file feature recognition and 3D visualization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
  
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/step3d"]