[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "step3d"
version = "0.1.0"
description = "A tool for viewing and analyzing STEP files"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.19.0",
    "PyQt5>=5.15.0",
    "PyQt5-sip>=12.8.0",
    "PyQt5-Qt5>=5.15.0",
    "OCC-Core>=7.5.0",
    "pythonocc-core>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
step-viewer = "step3d.ui.run_viewer:main"

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["OCC.*", "PyQt5.*"]
ignore_missing_imports = true
